@@ -1,3 +1,7 @@
+2001-06-22  Tambet Ingo  <tambet@ximian.com>
+
+	* x.pl.in (parse_modeline): Implement. Doesn't work right yet.
+
 2001-06-21  Tambet Ingo  <tambet@ximian.com>
 
 	* x.pl.in (xst_xfree4_conf_get): Added support for "SubSection"s,
